<resources>
    <string name="app_name">Track Progress</string>
    <string name="today">Today</string>
    <string name="private_image">Private Image</string>
    <string name="say_something">Say something!</string>
    <string name="see_more">See more</string>
    <string name="add_tag">Add Tag</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="tag_name">Tag name</string>
    <string name="all_tag">All tag</string>
    <string name="remove_selected_tag">Remove selected tag</string>
    <string name="error_tag_name_empty">Tag name is empty</string>
    <string name="error_tag_name_duplicate">Tag already exists</string>
    <string name="unknown_error">An unknown error</string>
    <string name="default_text">Default</string>
    <string name="new_tag">New tag</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="deleted">Deleted!</string>
    <string name="days_ago">%d days ago</string>
    <string name="error_no_image_on_tag">You have no image on current tag</string>
    <string name="error_no_image">You have no image</string>
    <string name="before_vs_after">Before vs After</string>
    <string name="title">Title</string>
    <string name="time_1">Time 1</string>
    <string name="time_2">Time 2</string>
    <string name="style">Style</string>
    <string name="folder_cant_be_created">Folder can not be created</string>
    <string name="loading">Loading</string>
    <string name="saved">Saved successfully</string>
    <string name="image_saved">Your photo has been saved! Go to Gallery to see your photo</string>
    <string name="select_image_left">Select image left</string>
    <string name="select_image_right">Select image right</string>
    <string name="share_video">Share image</string>
    <string name="settings">Settings</string>
    <string name="pass_code">Passcode</string>
    <string name="pass_code_settings">Passcode setting</string>
    <string name="export_all_image_to_gallery">Export all image to gallery</string>
    <string name="import_image">Import image</string>
    <string name="premium">Premium</string>
    <string name="no_ads">No ads</string>
    <string name="hello_s">Hello!</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="reenter_password">Reenter Passcode</string>
    <string name="passcode_successfully">Your passcode was set successfully</string>
    <string name="biometric_title">Biometric login</string>
    <string name="biometric_subtitle">Log in using your biometric credential</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_register_email">Enter your register email</string>
    <string name="send_me_new_passcode">Send me new passcode</string>
    <string name="send_email_forgot_password_success">Please check your email for get a new passcode</string>
    <string name="email_is_used_to_reset_your_passcode">Email is used to reset your passcode</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="authen_error">Authentication error</string>
    <string name="import_success">Image was imported successfully</string>
    <string name="import_not_image">Please select the image file</string>
    <string name="close">Close</string>
    <string name="str_continue">Continue</string>
    <string name="enter_your_name">Write your name</string>
    <string name="default_name">My Friend</string>
    <string name="tag_manager">Tag Manager</string>
    <string name="update">Update</string>
    <string name="delete_image_tag">Delete the image belonging to that tag</string>
    <string name="photo_no_tag">Some photos do not have tags</string>
    <string name="view_image"><u>View Images</u></string>
    <string name="move">Move</string>
    <string name="select_all">All</string>
    <string name="no_images_selected">No images selected</string>
    <string name="image_move_to_tag">Images will belong to the selected tag</string>
    <string name="export_success">Successful image export</string>
    <string name="str_ok">OK</string>
    <string name="ask_export_image">Are you sure you want to export all image to folder</string>
    <string name="restore">Restore</string>
    <string name="if_you_lose_data_restore_it">If you lose data, restore it</string>
    <string name="rotate">Rotate</string>
    <string name="brush">Brush</string>
    <string name="text">Text</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="fail_to_save_your_image">Fail to save your image</string>
    <string name="no_data_to_restore">No data to restore</string>
    <string name="start_here">Start here</string>
    <string name="rate_me_5_stars_for_my_effort">Rate me 5 stars for my effort</string>

    <string name="rate">Rate</string>
    <string name="please_give_5_star">Please give me a 5-star rating</string>
    <string name="thanks_for_your_feed_back">Thanks for your feedback</string>
    <string name="your_image">Your Image</string>
    <string name="crop">Crop</string>
    <string name="share">Share</string>
    <string name="done">Done</string>

    <string name="send_email_forgot_password_fail">Cannot send email. Please try again later.</string>
    <string name="check_spam_folder">Please check in the spam folder if you cannot find the email.</string>

    <string name="language">Language</string>
    <string name="str_edit">Edit</string>
    <string name="str_cancel">Cancel</string>

</resources>
