<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/constraintLayout"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/bg_white_radius_20"
        android:translationY="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_save"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageView"
        android:layout_width="236dp"
        android:layout_height="160dp"
        android:layout_marginBottom="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_days_ago"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="20dp" />

    <EditText
        android:id="@+id/edt_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_image_note"
        android:fontFamily="@font/lato_regular"
        android:gravity="top|start"
        android:hint="@string/say_something"
        android:lines="3"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        app:singleSelection="true"
        app:singleLine="false"
        app:layout_constraintEnd_toEndOf="@+id/edt_note"
        app:layout_constraintStart_toStartOf="@+id/edt_note"
        app:layout_constraintTop_toBottomOf="@+id/edt_note">

        <!--        <com.google.android.material.chip.Chip-->
        <!--            android:id="@+id/default_tag"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:fontFamily="@font/lato_regular"-->
        <!--            android:text="sdfdsfdf"-->
        <!--            app:layout_constraintStart_toStartOf="@+id/edt_note"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/edt_note" />-->
        <!--        -->
        <com.google.android.material.chip.Chip
            android:id="@+id/txt_see_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/see_more"
            android:textColor="@color/blue_dark"
            app:chipBackgroundColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/default_tag"
            app:layout_constraintStart_toEndOf="@+id/default_tag"
            app:layout_constraintTop_toTopOf="@+id/default_tag" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/txt_add_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:padding="5dp"
        android:text="@string/add_tag"
        android:textColor="@color/blue_dark"
        android:translationX="-5dp"
        app:layout_constraintStart_toStartOf="@+id/edt_note"
        app:layout_constraintTop_toBottomOf="@+id/chip_group"
        app:layout_goneMarginTop="8dp" />

    <TextView
        android:id="@+id/txt_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_button_save"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:paddingStart="35dp"
        android:paddingTop="8dp"
        android:paddingEnd="35dp"
        android:paddingBottom="8dp"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/txt_delete"
        app:layout_constraintStart_toStartOf="@+id/edt_note"
        app:layout_constraintTop_toBottomOf="@+id/txt_add_tag" />

    <TextView
        android:id="@+id/txt_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/lato_regular"
        android:padding="10dp"
        android:text="@string/delete"
        android:textColor="@color/blue_dark"
        app:layout_constraintBottom_toBottomOf="@+id/txt_save"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/txt_save" />

</androidx.constraintlayout.widget.ConstraintLayout>