<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/gray_dimmer"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="330dp"
        android:layout_marginBottom="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_radius_20"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/txt_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_button_save"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:paddingStart="35dp"
            android:paddingTop="8dp"
            android:paddingEnd="35dp"
            android:paddingBottom="8dp"
            android:text="@string/add_tag"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/txt_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcv_tag" />

        <TextView
            android:id="@+id/txt_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:padding="10dp"
            android:text="@string/str_cancel"
            android:textColor="@color/blue_dark"
            app:layout_constraintBottom_toBottomOf="@+id/txt_save"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="@+id/txt_save" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/new_tag"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edit_image_note"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/txt_all_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/all_tag"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/rcv_tag"
            android:layout_width="match_parent"
            android:animateLayoutChanges="true"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_all_tag"
            app:singleLine="false"
            app:singleSelection="true">

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>